--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Stationery{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -14,7 +15,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">
                             Home
@@ -43,11 +44,9 @@
                         </ul>
                     </li>
                 </ul>
-                <div class="d-flex justify-content-end">
-                    <a href="{% url 'cart_detail' %}" class="btn btn-outline-light">
-                        <i class="bi bi-cart"></i> Cart
-                    </a>
-                </div>
+                <a href="{% url 'cart_detail' %}" class="btn btn-outline-light">
+                    <i class="bi bi-cart"></i> Cart
+                </a>
             </div>
         </div>
     </nav>
